--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+    background-color: rgb(207, 207, 207);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main{
+    text-align: center;
+    margin-bottom: 10px;
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.input{
+    margin-top: 10px;
+    max-width: auto;
+    
+    display: flex;
+    justify-content: space-around;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.input-c{
+    width:450px;
+    height:400px;
+    margin: 10px;
+    
+}
+hr{
+    margin-top: 10px;
+    height:4px;
+    background-color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.textarea-a{
+    width:inherit;
+    height: inherit;
+    resize: none;
+    background-color: rgb(7, 7, 73);
+    font-size: 16px;
+    color: white;
+}
+
+.textarea-b{
+    width:inherit;
+    height: inherit;
+    resize: none;
+    background-color: rgb(4, 68, 20);
+    font-size: 16px;
+    color: white;
+}
+.textarea-c{
+    width:inherit;
+    height: inherit;
+    resize: none;
+    background-color: rgb(143, 2, 2);
+    color: white;
+    font-size: 16px;
+    font-family: sans-serif;
 }
