--- a/src/App.css
+++ b/src/App.css
@@ -7,17 +7,34 @@ body{
     background-color: rgb(207, 207, 207);
 }
 
+.document{
+    display: flex;
+}
+
 .main{
     text-align: center;
     margin-bottom: 10px;
     
 }
 
+.vl{
+    height:1200px;
+    border-left: 5px solid red;
+    margin-top: 45px;
+}
+
+.Output{
+    background-color: aqua;
+    width:1000px;
+    text-align: center;
+    margin-top: 45px;
+}
+
 .input{
     margin-top: 10px;
-    max-width: auto;
-    
+    width: 550px;
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
  
 }
@@ -25,7 +42,7 @@ body{
 .input-c{
     width:450px;
     height:400px;
-    margin: 10px;
+    margin: 10px 10px 25px 10px;
     
 }
 hr{
@@ -59,4 +76,9 @@ hr{
     color: white;
     font-size: 16px;
     font-family: sans-serif;
+}
+
+iframe{
+    width: 900px;
+    height:1000px;
 }
