--- a/src/App.css
+++ b/src/App.css
@@ -1,84 +1,37 @@
 *{
-    margin: 0;
-    
-}
-
-body{
-    background-color: rgb(207, 207, 207);
-}
-
-.document{
-    display: flex;
+    margin:0;
+    padding:0;
 }
 
 .main{
     text-align: center;
-    margin-bottom: 10px;
-    
-}
-
-.vl{
-    height:1200px;
-    border-left: 5px solid red;
-    margin-top: 45px;
-}
-
-.Output{
-    background-color: aqua;
-    width:1000px;
-    text-align: center;
-    margin-top: 45px;
 }
 
 .input{
-    margin-top: 10px;
-    width: 550px;
     display: flex;
+    width: 400px;
     flex-direction: column;
-    justify-content: space-around;
- 
+    background-color: red;
 }
 
-.input-c{
-    width:450px;
-    height:400px;
-    margin: 10px 10px 25px 10px;
+#html, #css, #js {
+    
+    margin: 30px 20px;
+    float:left;
     
 }
-hr{
-    margin-top: 10px;
-    height:4px;
-    background-color: black;
+
+textarea{
+    resize: none;
 }
 
-.textarea-a{
-    width:inherit;
-    height: inherit;
-    resize: none;
-    background-color: rgb(7, 7, 73);
-    font-size: 16px;
-    color: white;
-}
-
-.textarea-b{
-    width:inherit;
-    height: inherit;
-    resize: none;
-    background-color: rgb(4, 68, 20);
-    font-size: 16px;
-    color: white;
-}
-.textarea-c{
-    width:inherit;
-    height: inherit;
-    resize: none;
-    background-color: rgb(143, 2, 2);
-    color: white;
-    font-size: 16px;
-    font-family: sans-serif;
+.output{
+    float:right;
+    margin-right:50px;
+    width:40vw;
+    
 }
 
 iframe{
-    width: 900px;
-    height:1000px;
+    width:40vw;
 }
