--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 *{
     margin:0;
     padding:0;
+  
+}
+
+body{
+    background-color: rgb(255, 255, 255);
 }
 
 .main{
@@ -8,30 +13,55 @@
 }
 
 .input{
-    display: flex;
-    width: 400px;
-    flex-direction: column;
-    background-color: red;
-}
-
-#html, #css, #js {
+    width: 450px;
     
-    margin: 30px 20px;
+    text-align: center;
+    float: left;
+    margin-left: 50px;
+    margin-top: 40px;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+#html, #css, #js {
+    margin-bottom: 20px;
+    margin-top:20px;
+    margin-right: 30px;
     float:left;
     
+    
 }
+
 
 textarea{
     resize: none;
+    width:450px;
+    height:400px;
+}
+
+.outputButton{
+    width: 90px;
+    height:30px;
+    font-size: 1.2rem;
+    border-radius: 10px;
+    background-color: cadetblue;
+    
 }
 
 .output{
     float:right;
     margin-right:50px;
-    width:40vw;
+    margin-top: 40px;
+    width:50vw;
     
 }
 
 iframe{
-    width:40vw;
+    margin-top: 25px;
+    width:50vw;
+    position: relative;
+    border:none;
+    
 }
