--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,136 @@
 *{
     margin:0;
     padding:0;
-  
 }
 
 body{
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(209, 209, 209);
 }
 
-.main{
+.heading{
+    background-color: rgb(223, 223, 223);
     text-align: center;
+    font-size: 20px;
+    width:300px;
+    margin: 0 auto;
+    border-bottom: 2px solid rgb(173, 173, 173);
+    border-right: 2px solid rgb(173, 173, 173);
+    border-radius: 10px;
+}
+
+.io{
+    margin-top: 20px;
+    margin-left: 60px;
+    
 }
 
 .input{
-    width: 450px;
-    
-    text-align: center;
     float: left;
-    margin-left: 50px;
-    margin-top: 40px;
-}
-form{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-#html, #css, #js {
-    margin-bottom: 20px;
-    margin-top:20px;
-    margin-right: 30px;
-    float:left;
-    
-    
+    width:500px;
 }
 
+form{
+    padding:auto;
+}
+
+.outputButton{
+   position: relative;
+   left:180px;
+   margin:10px;
+   width:100px;
+   height:40px;
+   border-radius:10px;
+   font-size:22px;
+   font-weight: bold;
+   background-color: rgb(224, 224, 224);
+   color:rgb(67, 137, 184);
+   border: 2px solid rgb(204, 204, 204)
+}
+
+.outputButton:hover{
+    background-color: rgb(105, 184, 236);
+    color:white;
+    transition: .2s;
+}
+
+#html, #css, #js{
+    margin-top:10px;
+    margin-left:10px;
+}
+
+#html button{
+    width:90px;
+    height:35px;
+    margin-bottom: 5px;
+    font-size: 20px;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
+#html button:hover{
+    background-color: rgb(255, 255, 255);
+    color:rgb(0, 102, 0);
+    transition: .2s;
+}
+
+#css button{
+    font-weight: bold;
+    width:90px;
+    height:35px;
+    margin-bottom: 5px;
+    font-size: 19px;
+    border-radius: 10px;
+}
+
+#css button:hover{
+    background-color: rgb(255, 255, 255);
+    color:rgb(50, 46, 107);
+    transition: .2s;
+}
+
+#js button{
+    font-weight: bold;
+    width:90px;
+    height:35px;
+    margin-bottom: 5px;
+    font-size: 19px;
+    border-radius: 10px;
+}
+
+#js button:hover{
+    background-color: rgb(255, 255, 255);
+    color:rgb(116, 0, 0);
+    transition: .2s;
+}
+
+#html textarea{
+    background-color: rgb(0, 70, 0);
+    color:white;
+}
+
+#css textarea{
+    background-color: rgb(0, 0, 109);
+    color:white;
+}
+
+#js textarea{
+    background-color: rgb(122, 0, 0);
+    color:white;
+}
 
 textarea{
     resize: none;
     width:450px;
     height:400px;
-}
-
-.outputButton{
-    width: 90px;
-    height:30px;
-    font-size: 1.2rem;
-    border-radius: 10px;
-    background-color: cadetblue;
-    
+    font-size: 18px;
+    border-radius: 15px;
+    padding:8px;
 }
 
 .output{
     float:right;
-    margin-right:50px;
-    margin-top: 40px;
-    width:50vw;
-    
+    margin-right: 100px;
+    background-color: red;
+    width:650px;
 }
 
-iframe{
-    margin-top: 25px;
-    width:50vw;
-    position: relative;
-    border:none;
-    
-}
